Bug 242970 Server Settings/local directory was changed to \\.\D:\pop3.server.name (Other than C: drive,After 2004-04-29 build) r=bienvenu sr=bienvenu